--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,3 @@
 {
-    "cmake.configureOnOpen": false,
-    "files.associations": {
-        "stond.h": "c",
-        "stdker.h": "c"
-    }
+    "C_Cpp.default.compilerPath": "gcc"
 }
